# async_logs_fastapi_backend

./: Dockerfile  docker-compose.yml  pyproject.toml
app/core/: settings.py
