[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Viva <sovestyaaaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.2"}
sqlalchemy = "^2.0.27"
uvicorn = "^0.27.1"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
aiologger = "^0.7.0"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
python-jose = "^3.3.0"
ciso8601 = "^2.3.1"
graypy = "^2.1.0"
sentry-sdk = "^1.40.6"
opentelemetry-sdk = "^1.23.0"
opentelemetry-api = "^1.23.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
